base-apps/vcluster-sandbox-1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vcluster
  namespace: vcluster-sandbox-1
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - sandbox-1.vcluster.arigsela.com
      secretName: vcluster-tls
  rules:
    - host: sandbox-1.vcluster.arigsela.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vcluster
                port:
                  number: 443
